<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_weight="1"
        android:id="@+id/detailbill_time"
        android:textSize="20sp"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_weight="1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/detailbill_type"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/money"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/detailbill_moneynum"
        android:layout_weight="1"
        android:layout_gravity="center_vertical" />
</LinearLayout>