<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:alpha="20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailbill"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/detailbill_tv" />
    <LinearLayout
        android:background="@color/title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="#000"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="#000"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <com.mybooks.view.CornerListView
        android:id="@+id/detailbill_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_3"
        android:cacheColorHint="#00000000"
        android:divider="#dddbdb"
        android:dividerHeight="1px"
        android:drawSelectorOnTop="false"
        android:listSelector="#00000000"
        android:scrollbars="none"
        android:scrollingCache="false"
        >
    </com.mybooks.view.CornerListView>
</LinearLayout>