<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_3"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updata_bill"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/more_title" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/more_et_time"
            android:layout_gravity="center"
             />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/more_et_moneynum"
            android:digits="0123456789."
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20sp"
            android:layout_gravity="center"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/more_sp_type"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:entries="@array/type"
            >
        </Spinner>


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/earnings"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/more_sp_earnings"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:entries="@array/earnings"
            >
        </Spinner>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/more_et_remark"
            android:layout_gravity="center"
            android:hint="@string/remark_hint"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_more_update"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_check_circle_black_18dp" />


        <Button
            android:id="@+id/bt_more_cancel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_highlight_off_black_18dp" />

    </RelativeLayout>


</LinearLayout>