<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bg_3"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/regist_title_tv"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="35sp"/>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText

            android:hint="@string/login_username_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/registe_username_et" />

        <EditText
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:hint="@string/login_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registe_password_et" />

        <EditText
            android:layout_marginTop="20dp"
            android:hint="@string/login_password_confirm"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registe_confirm_password_et" />

    </LinearLayout>



    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton

        android:id="@+id/registe_btn"
        android:background="@drawable/ic_check_circle_black_18dp"
        android:textSize="30sp"
        android:text="@string/register"
        android:layout_margin="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />

        <ImageButton
            android:id="@+id/registe_cancel"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_highlight_off_black_18dp"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    </RelativeLayout>
</LinearLayout>